--- a/estilo.css
+++ b/estilo.css
@@ -214,3 +214,143 @@ html {
 .sobremi button:hover .overlay {
     width: 100%;
 }
+
+/* Estilos de la seccion de habilidades */
+.habilidades {
+    background-color: #252a2e;
+    color: #fff;
+    padding: 50px 20px;
+}
+.habilidades .contenido-seccion {
+    max-width: 1100px;
+    margin: auto;
+}
+.habilidades h2 {
+    font-size: 48px;
+    font-family: 'Righteous';
+    text-align: center;
+    padding: 20px 0;
+}
+.habilidades .fila {
+    display: flex;
+}
+.habilidades .fila .col {
+    width: 50%;
+    padding: 0 20px;
+}
+.habilidades .fila .col h3 {
+    font-size: 28px;
+    font-family: 'Righteous';
+    margin-bottom: 25px;
+}
+.habilidades .habilidad > span {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 10px;
+}
+.habilidades .habilidad .barra-habilidad {
+    height: 8px;
+    width: 80%;
+    background-color: #131517;
+    position: relative;
+    margin-bottom: 30px;
+}
+.habilidades .habilidad .progreso {
+    background-color: #1cb698;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 8px;
+}
+.habilidades .habilidad .barra-habilidad span {
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    background-color: #1cb698;
+    border-radius: 50px;
+    line-height: 40px;
+    text-align: center;
+    top: -17px;
+    right: -15px;
+    font-size: 14px;
+}
+.habilidades .habilidad .javascript {
+    width:  0%;
+    animation: 2s javascript forwards;
+}
+@keyframes javascript {
+    0%{width: 0%;}
+    100%{width: 75%;}
+}
+.habilidades .habilidad .wordpress {
+    width:  0%;
+    animation: 2s wordpress forwards;
+}
+@keyframes wordpress {
+    0%{width: 0%;}
+    100%{width: 65%;}
+}
+.habilidades .habilidad .mysql {
+    width:  0%;
+    animation: 2s mysql forwards;
+}
+@keyframes mysql {
+    0%{width: 0%;}
+    100%{width: 80%;}
+}
+.habilidades .habilidad .htmlcss {
+    width:  0%;
+    animation: 2s htmlcss forwards;
+}
+@keyframes htmlcss {
+    0%{width: 0%;}
+    100%{width: 60%;}
+}
+.habilidades .habilidad .laravel {
+    width:  0%;
+    animation: 2s laravel forwards;
+}
+@keyframes laravel {
+    0%{width: 0%;}
+    100%{width: 70%;}
+}
+.habilidades .habilidad .trabajoequipo {
+    width:  0%;
+    animation: 2s trabajoequipo forwards;
+}
+@keyframes trabajoequipo {
+    0%{width: 0%;}
+    100%{width: 85%;}
+}
+.habilidades .habilidad .dedicacion {
+    width:  0%;
+    animation: 2s dedicacion forwards;
+}
+@keyframes dedicacion {
+    0%{width: 0%;}
+    100%{width: 90%;}
+}
+.habilidades .habilidad .creatividad {
+    width:  0%;
+    animation: 2s creatividad forwards;
+}
+@keyframes creatividad {
+    0%{width: 0%;}
+    100%{width: 70%;}
+}
+.habilidades .habilidad .comunicacion {
+    width:  0%;
+    animation: 2s comunicacion forwards;
+}
+@keyframes comunicacion {
+    0%{width: 0%;}
+    100%{width: 83%;}
+}
+.habilidades .habilidad .puntualidad {
+    width:  0%;
+    animation: 2s puntualidad forwards;
+}
+@keyframes puntualidad {
+    0%{width: 0%;}
+    100%{width: 94%;}
+}
