--- a/estilo.css
+++ b/estilo.css
@@ -643,3 +643,81 @@ footer .arriba {
     line-height: 50px;
     font-size: 18px;
 }
+
+/* Reponsivo Encabezado */
+@media screen and (max-width: 980px) {
+    nav {
+        display: none;
+    }
+    .nav-responsive {
+        display: block;
+    }
+    nav.responsive {
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 75px;    
+        background-color: #252a2e;
+        width: 180px;
+    }
+    nav.responsive ul {
+        display: block !important;
+    }
+    nav.responsive ul li {
+        border-bottom: 1px solid #fff;
+        padding: 10px 0;
+    }
+}
+
+/* Reponsivo Secciones */
+@media screen and (max-width:700px) {
+    /* Seccion sobre mi  */
+    .sobremi .fila {
+        display: block;
+    }
+    .sobremi .fila .col {
+        width: fit-content;
+    }
+
+    /* Seccion de habilidades */
+    .habilidades .fila {
+        display: block;
+    }
+    .habilidades .fila .col {
+        width: 100%;
+    }
+    .habilidades .fila .col .barra-habilidad {
+        width: 100%;
+    }
+    
+    /* Seccion de curriculum  */
+    .curriculum .fila {
+        display: block;
+    }
+    .curriculum .fila .col {
+        width: 90%;
+    }
+    .curriculum .fila .derecha {
+        margin-left: 20px;
+    }
+
+    /* Seccion portafolio */
+    .portafolio .galeria {
+        display: block;
+        width: 100%;
+    }
+    .portafolio .galeria .proyecto {
+        max-width: 100%;
+    }
+    .portafolio .galeria .proyecto img {
+        width: 100%;
+    }
+
+    /* Seccion de contacto */
+    .contacto .fila {
+        display: block;
+    }
+    .contacto .fila .col {
+        width: 100%;
+    }
+}
